chore: app cds logs